Tweak responsive breakpoints.

--- a/css/main.css
+++ b/css/main.css
@@ -492,10 +492,10 @@ input.form-error {
 }
 
 /* --------------------------------------------------------------------------*/
-/* 12. > 480                                                                 */
+/* 13. > 560                                                                 */
 /* --------------------------------------------------------------------------*/
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 35rem) {
 
   .nav-btn {
     padding-left: 1rem;
@@ -529,14 +529,5 @@ input.form-error {
     padding-top: 1.5rem;
     font-size: 1.5rem;
   }
-
-}
-
-/* --------------------------------------------------------------------------*/
-/* 13. > 640                                                                 */
-/* --------------------------------------------------------------------------*/
-
-@media screen and (min-width: 40em) {
-
 
 }
