--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -10,8 +10,7 @@
  * 07. Colors
  * 08. Component
  * 09. Footer
- * 10. > 480
- * 11. > 640
+ * 10. > 720
  */
 
 /* --------------------------------------------------------------------------*/
@@ -321,10 +320,10 @@
 }
 
 /* --------------------------------------------------------------------------*/
-/* 10. > 480                                                                 */
+/* 10. > 720                                                                 */
 /* --------------------------------------------------------------------------*/
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 45rem) {
 
   .sg-wrap {
     flex-direction: row;
@@ -362,6 +361,11 @@
     width: 12rem; /* 192px */
   }
 
+  .sg-content-wrap {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .sg-content {
     flex-grow: 1;
     flex-basis: 39rem; /* 624px */
@@ -369,19 +373,6 @@
     overflow-y: auto;
     padding-top: 3rem;
     height: 100vh;
-  }
-
-}
-
-/* --------------------------------------------------------------------------*/
-/* 11. > 640                                                                 */
-/* --------------------------------------------------------------------------*/
-
-@media screen and (min-width: 40em) {
-
-  .sg-content-wrap {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
 }
