update Join Us, Events, About, Contact page

--- a/css/main.css
+++ b/css/main.css
@@ -509,11 +509,26 @@ input.form-error {
   height: 22.5rem;
 }
 
-.hero--landing {
+.hero--home--landing {
   background-image: url(../img/hero.jpg);
   background-position: top center;
 }
-
+.hero--join--landing{
+  background-image: url(../img/join-us.jpg);
+  background-position: top center;
+}
+.hero--events--landing{
+  background-image: url(../img/events.jpg);
+  background-position: top center;
+}
+.hero--about--landing{
+  background-image: url(../img/about.jpg);
+  background-position: top center;
+}
+.hero--contact--landing{
+  background-image: url(../img/contact.png);
+  background-position: top center;
+}
 .hero__wrap {
   height: 100%;
 }
