--- a/css/main.css
+++ b/css/main.css
@@ -472,7 +472,7 @@ input.form-error {
   text-transform: uppercase;
   color: white;
 }
-.nav-btn:hover, .nav-btn:active, .nav-btn:focus {
+.nav-btn:hover, .nav-btn:active, .nav-btn:focus, .nav-btn.-active {
   text-decoration: none;
   color: white;
 }
@@ -609,6 +609,10 @@ input.form-error {
   background-color: var(--color-gray-4);
 }
 
+.listings__item-content--alt {
+  background-color: white;
+}
+
 .listings__item-price {
   display: block;
   font-size: 1.3333rem;
@@ -642,7 +646,7 @@ input.form-error {
 
   .nav-btn {
     margin-top: 0.375rem;
-    color: rgba(255,255,255,0.8);
+    color: rgba(255,255,255,0.5);
   }
 
   .nav__menu {
@@ -661,6 +665,10 @@ input.form-error {
 
   .listings__item {
     width: 33.3333%;
+  }
+
+  .listings__item--alt {
+    width: 50%;
   }
 
 }
