Add adaptive grid.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
  * 10. Hero
  * 11. Landing
  * 12. Listings
- * 13. > 560
+ * 13. > 560px
  */
 
 /* --------------------------------------------------------------------------*/
@@ -279,11 +279,43 @@ code {
 }
 
 .col--11 {
-  width: 9.090909091%
+  width: 9.090909091%;
 }
 
 .col--12 {
   width: 8.3333%;
+}
+
+/* > 560px (md) */
+@media screen and (min-width: 35em) {
+  .col--1md { width: 100%; }
+  .col--2md { width: 50%; }
+  .col--3md { width: 33.3333%; }
+  .col--4md { width: 25%; }
+  .col--5md { width: 20%; }
+  .col--6md { width: 16.6666%; }
+  .col--7md { width: 14.285714286%; }
+  .col--8md { width: 12.5%; }
+  .col--9md { width: 11.1111%; }
+  .col--10md { width: 10%; }
+  .col--11md { width: 9.090909091% }
+  .col--12md { width: 8.3333%; }
+}
+
+/* > 720px (lg) */
+@media screen and (min-width: 45em) {
+  .col--1lg { width: 100%; }
+  .col--2lg { width: 50%; }
+  .col--3lg { width: 33.3333%; }
+  .col--4lg { width: 25%; }
+  .col--5lg { width: 20%; }
+  .col--6lg { width: 16.6666%; }
+  .col--7lg { width: 14.285714286%; }
+  .col--8lg { width: 12.5%; }
+  .col--9lg { width: 11.1111%; }
+  .col--10lg { width: 10%; }
+  .col--11lg { width: 9.090909091% }
+  .col--12lg { width: 8.3333%; }
 }
 
 /* --------------------------------------------------------------------------*/
@@ -625,7 +657,7 @@ input.form-error {
 }
 
 /* --------------------------------------------------------------------------*/
-/* 13. > 560                                                                 */
+/* 13. > 560px (md)                                                          */
 /* --------------------------------------------------------------------------*/
 
 @media screen and (min-width: 35em) {
@@ -670,5 +702,10 @@ input.form-error {
   .listings__item--alt {
     width: 50%;
   }
+/* --------------------------------------------------------------------------*/
+/* 13. > 720px (lg)                                                          */
+/* --------------------------------------------------------------------------*/
+
+@media screen and (min-width: 45em) {
 
 }
