--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -10,7 +10,7 @@
  * 07. Colors
  * 08. Component
  * 09. Footer
- * 10. > 720
+ * 10. > 720px (lg)
  */
 
 /* --------------------------------------------------------------------------*/
@@ -320,7 +320,7 @@
 }
 
 /* --------------------------------------------------------------------------*/
-/* 10. > 720                                                                 */
+/* 10. > 720px                                                               */
 /* --------------------------------------------------------------------------*/
 
 @media screen and (min-width: 45em) {
