--- a/css/main.css
+++ b/css/main.css
@@ -230,92 +230,59 @@ code {
 
 .row {
   display: flex;
-  margin: 0 -0.5rem;
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
 }
 
 .col {
   width: 100%;
-  padding: 0 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.col--1 {
-  width: 100%;
-}
-
-.col--2 {
-  width: 50%;
-}
-
-.col--3 {
-  width: 33.3333%;
-}
-
-.col--4 {
-  width: 25%;
-}
-
-.col--5 {
-  width: 20%;
-}
-
-.col--6 {
-  width: 16.6666%;
-}
-
-.col--7 {
-  width: 14.285714286%;
-}
-
-.col--8 {
-  width: 12.5%;
-}
-
-.col--9 {
-  width: 11.1111%;
-}
-
-.col--10 {
-  width: 10%;
-}
-
-.col--11 {
-  width: 9.090909091%;
-}
-
-.col--12 {
-  width: 8.3333%;
-}
+.col--1 { width: 8.3333%; }
+.col--2 { width: 16.6666667%; }
+.col--3 { width: 25%; }
+.col--4 { width: 33.3333%; }
+.col--5 { width: 41.6666667%; }
+.col--6 { width: 50%; }
+.col--7 { width: 58.3333%; }
+.col--8 { width: 66.6666667%; }
+.col--9 { width:  75%; }
+.col--10 { width: 83.3333%; }
+.col--11 { width: 91.6666667%; }
+.col--12 { width: 100%; }
 
 /* > 560px (md) */
 @media screen and (min-width: 35em) {
-  .col--1md { width: 100%; }
-  .col--2md { width: 50%; }
-  .col--3md { width: 33.3333%; }
-  .col--4md { width: 25%; }
-  .col--5md { width: 20%; }
-  .col--6md { width: 16.6666%; }
-  .col--7md { width: 14.285714286%; }
-  .col--8md { width: 12.5%; }
-  .col--9md { width: 11.1111%; }
-  .col--10md { width: 10%; }
-  .col--11md { width: 9.090909091% }
-  .col--12md { width: 8.3333%; }
+  .col--1md { width: 8.3333%; }
+  .col--2md { width: 16.6666667%; }
+  .col--3md { width: 25%; }
+  .col--4md { width: 33.3333%; }
+  .col--5md { width: 41.6666667%; }
+  .col--6md { width: 50%; }
+  .col--7md { width: 58.3333%; }
+  .col--8md { width: 66.6666667%; }
+  .col--9md { width:  75%; }
+  .col--10md { width: 83.3333%; }
+  .col--11md { width: 91.6666667%; }
+  .col--12md { width: 100%; }
 }
 
 /* > 720px (lg) */
 @media screen and (min-width: 45em) {
-  .col--1lg { width: 100%; }
-  .col--2lg { width: 50%; }
-  .col--3lg { width: 33.3333%; }
-  .col--4lg { width: 25%; }
-  .col--5lg { width: 20%; }
-  .col--6lg { width: 16.6666%; }
-  .col--7lg { width: 14.285714286%; }
-  .col--8lg { width: 12.5%; }
-  .col--9lg { width: 11.1111%; }
-  .col--10lg { width: 10%; }
-  .col--11lg { width: 9.090909091% }
-  .col--12lg { width: 8.3333%; }
+  .col--1lg { width: 8.3333%; }
+  .col--2lg { width: 16.6666667%; }
+  .col--3lg { width: 25%; }
+  .col--4lg { width: 33.3333%; }
+  .col--5lg { width: 41.6666667%; }
+  .col--6lg { width: 50%; }
+  .col--7lg { width: 58.3333%; }
+  .col--8lg { width: 66.6666667%; }
+  .col--9lg { width:  75%; }
+  .col--10lg { width: 83.3333%; }
+  .col--11lg { width: 91.6666667%; }
+  .col--12lg { width: 100%; }
 }
 
 /* --------------------------------------------------------------------------*/
