Add login to nav.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,9 @@
  * 10. Hero
  * 11. Others
  * 12. Listings
- * 13. > 560px
+ * 13. > 560px (md)
+ * 13. > 640px (nav-only)
+ * 13. > 720px (lg)
  */
 
 /* --------------------------------------------------------------------------*/
@@ -635,6 +637,14 @@ input.form-error, textarea.form-error {
 /* --------------------------------------------------------------------------*/
 
 @media screen and (min-width: 35em) {
+
+}
+
+/* --------------------------------------------------------------------------*/
+/* 14. > 640px (nav-only)                                                    */
+/* --------------------------------------------------------------------------*/
+
+@media screen and (min-width: 40em) {
 
   .nav-btn {
     padding-left: 1rem;
