--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ h1, .h1 {
 h2, h3, strong,
 .h2, .h3 {
   font-weight: 600;
+  margin-bottom:  1.2rem;
 }
 
 h2, .h2 {
@@ -318,15 +319,17 @@ label {
   font-weight: 600;
 }
 
-input[type="text"], input[type="email"], input[type="number"], input[type="password"], textarea {
+input[type="text"], input[type="email"], input[type="number"], input[type="password"], textarea, select {
   display: block;
+  border-radius: 0;
   padding: 0.625rem 0.5rem 0.5rem 0.5rem;
   border: solid 3px var(--color-night);
   background-color: white;
   width: 100%;
+  -webkit-appearance: none;
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus {
   outline: solid 3px #FA8232;
 }
 
@@ -335,7 +338,7 @@ input:focus, textarea:focus {
   color: red;
 }
 
-input.form-error, textarea.form-error {
+input.form-error, textarea.form-error, select.form-error {
   border-color: #EB0000;
 }
 
@@ -347,6 +350,10 @@ input.form-error, textarea.form-error {
 
 .form-group {
   margin-bottom: 1rem;
+}
+
+.form-section {
+  margin-bottom: 2rem;
 }
 
 /* --------------------------------------------------------------------------*/
@@ -572,6 +579,12 @@ input.form-error, textarea.form-error {
 .hero--login {
   background-image: url(../img/hero-login.jpg);
   background-position: top center;
+}
+
+.hero--register {
+  background-image: url(../img/hero-login.jpg);
+  background-position: top center;
+  height: 10.25rem; /* 164px */
 }
 
 .hero__wrap {
