--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,11 @@ code {
   padding-right: 0.5rem;
 }
 
+.grid-col-1of2{
+  width: 45%;
+  display:inline-block;
+}
+
 .col--1 { width: 8.3333%; }
 .col--2 { width: 16.6666667%; }
 .col--3 { width: 25%; }
@@ -586,6 +591,7 @@ input.form-error, textarea.form-error, select.form-error {
   background-position: top center;
   height: 10.25rem; /* 164px */
 }
+
 
 .hero__wrap {
   height: 100%;
