Vertical align images by default.

--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@ code {
   line-height: 1.2;
 }
 
+img {
+  vertical-align: top;
+}
+
 /* --------------------------------------------------------------------------*/
 /* 02. Utilities                                                             */
 /* --------------------------------------------------------------------------*/
